<resources>
    <string name="app_name">My Boutique Kehzabr</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="home_fragment_label">Home Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="add_order">Add Order</string>
    <string name="submit">Submit</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="add_order_details">Add Order Details</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_barcode_scanning">Scan Barcode</string>

    <!-- Misc Labels & Texts -->
    <string name="scanned_code_result_label">Scan Result:</string>
    <string name="customer_name">Customer Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="title_home">Home</string>
    <string name="title_search">search</string>
    <string name="title_favourites">Report</string>
</resources>